refactor: use abstract class Controller
Renamed file